<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/rl_root"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:background="@color/white"
                android:orientation="vertical">
    <RelativeLayout
        style="@style/navbar_style">

        <Button
            android:id="@+id/btn_back"
            style="@style/nav_fun_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/icon_back" />
        <TextView
            android:id="@+id/tv_title"
            style="@style/nav_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:text="@string/feed_back"
            android:gravity="center"/>

    </RelativeLayout>
    <EditText
        android:id="@+id/et_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#0000"
        android:minHeight="150dp"
        android:ems="10"
        android:fadingEdge="vertical"
        android:gravity="top"
        android:hint="@string/feedback_note"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:scrollbars="none"
        android:textSize="18sp">

        <requestFocus />
    </EditText>
    <Button
        android:id="@+id/btn_submit"
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="#fff"
        android:background="@color/nav_green"
        android:text="@string/commit" />
</LinearLayout>