<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/dialog_details_bg"
    >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:scaleType="centerCrop"
        android:background="@drawable/icon_hint_share"
        android:id="@+id/iv_icon" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_icon"
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/ll_1">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <TextView
                android:id="@+id/tv_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/share_content_tips"
                android:textColor="@color/grey_1"
                android:textSize="16sp"
                android:gravity="center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/ckb_notice_dialog_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:layout_gravity="center_vertical"
                android:button="@drawable/selector_check_box"/>

            <TextView
                android:paddingLeft="5dp"
                android:text="@string/notice_notNotice"
                android:textColor="@color/grey_3"
                android:textSize="16sp"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="123dp"
                android:layout_height="32dp"
                android:text="@string/btn_cancel"
                style="@style/button_nav_style"
                android:background="@drawable/selector_share_hint_bg"
                android:textSize="16sp"
                android:gravity="center"
                android:textColor="@color/green_1"
                android:layout_weight="1"
                android:layout_marginRight="4dp" />

            <Button
                android:id="@+id/btn_share"
                android:layout_width="126dp"
                android:layout_height="32dp"
                android:text="@string/share"
                style="@style/button_nav_style"
                android:background="@drawable/selector_share_bg"
                android:textSize="16sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_marginLeft="4dp" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>