<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/nav_green">
    <RelativeLayout
        android:id="@+id/linearLayout1"
        style="@style/navbar_style">
        <Button
            android:id="@+id/btn_back"
            style="@style/nav_fun_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/icon_back" />
        <TextView
            android:id="@+id/textView1"
            style="@style/nav_text_style"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/suggestion_feed_back" >
        </TextView>
        <Button
            android:id="@+id/btn_feedback_new"
            style="@style/button_nav_style"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginRight="10dp"
            android:text="@string/feed_back"
            android:textColor="@color/white"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textSize="16sp" />
    </RelativeLayout>
    <cn.etouch.environment.views.PullToRefreshRelativeLayout
        android:id="@+id/pullToRefreshRelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">
        <ListView
            android:id="@+id/listView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fadingEdgeLength="0dp"
            android:divider="@color/trans"
            android:cacheColorHint="#0000"
            android:listSelector="#0000"/>
        <ImageView
            android:id="@+id/imageView_backTop"
            android:layout_width="52dp"
            android:layout_height="64dp"
            android:src="@drawable/btn_ic_backtop"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="12dp"
            android:paddingBottom="12dp"
            android:visibility="gone"/>

        <com.lip.woqu.view.LoadingView
            android:id="@+id/loadingView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <LinearLayout
            android:id="@+id/linearLayou_nodata"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="gone">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="16sp"
                android:drawableTop="@drawable/tips_empty"
                android:textColor="@color/grey"
                android:text="@string/notice_no_feed_back"/>
        </LinearLayout>
    </cn.etouch.environment.views.PullToRefreshRelativeLayout>
</LinearLayout>