<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/ll_root"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/nav_green">

    <RelativeLayout
        style="@style/navbar_style">

        <Button
            android:id="@+id/btn_back"
            style="@style/nav_fun_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/icon_back" />

        <TextView
            android:id="@+id/TextView01"
            style="@style/nav_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/user_center_message"></TextView>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/ll_touxiang"
            android:layout_width="fill_parent"
            android:layout_height="95dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:background="@drawable/selector_list_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/user_icon"
                android:textColor="@color/grey_1"
                android:textSize="15sp" />

            <com.lip.woqu.view.ETNetworkImageView
                android:id="@+id/img_touxiang"
                android:layout_width="66dp"
                android:layout_height="66dp"
                android:layout_marginRight="12dp"
                android:scaleType="fitXY"
                android:src="@drawable/default_avatar"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_gray" />
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/line_color" />

        <LinearLayout
            android:id="@+id/ll_nickName"
            android:layout_width="fill_parent"
            android:layout_height="56dp"
            android:background="@drawable/selector_list_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="12dp"
            android:paddingRight="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/user_nick"
                android:textColor="@color/grey_1"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_nickName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="20dp"
                android:gravity="center_vertical|right"
                android:singleLine="true"
                android:text="隔壁小不"
                android:textColor="@color/grey_2"
                android:textSize="15sp"
                android:layout_marginRight="12dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_gray" />
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/line_color" />
        <LinearLayout
            android:id="@+id/ll_gender"
            android:layout_width="fill_parent"
            android:layout_height="56dp"
            android:background="@drawable/selector_list_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="12dp"
            android:paddingRight="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/user_gender"
                android:textColor="@color/grey_1"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="20dp"
                android:gravity="center_vertical|right"
                android:singleLine="true"
                android:text="男"
                android:textColor="@color/grey_2"
                android:textSize="15sp"
                android:layout_marginRight="12dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_gray" />
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/line_color" />
        <LinearLayout
            android:id="@+id/ll_phone"
            android:layout_width="fill_parent"
            android:layout_height="56dp"
            android:background="@drawable/selector_list_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="12dp"
            android:paddingRight="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/user_phone"
                android:textColor="@color/grey_1"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="20dp"
                android:gravity="center_vertical|right"
                android:singleLine="true"
                android:text="18071040417"
                android:textColor="@color/grey_2"
                android:textSize="15sp"
                android:layout_marginRight="12dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_gray" />
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/line_color" />


    </LinearLayout>

</LinearLayout>
